test/zinc_source/compile_errors/control_flow/04_break_outside_loop_in_if_expression.zn
// expected-error: break is only valid inside a loop

fn main() {
    value = if true {
        break
    } else {
        1
    }
}
